fixed the bleeding color code of descriptions behind the buttons

--- a/style.css
+++ b/style.css
@@ -45,16 +45,22 @@ textarea{
 .past {
   background-color: #d3d3d3;
   color: white;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px; 
 }
 
 .present {
   background-color: #ff6961;
   color: white;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 .future {
   background-color: #77dd77;
   color: white;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 .saveBtn {
@@ -72,6 +78,6 @@ textarea{
 
 .saveBtn:active {
   background-color: #0591b1;
-  transform: translateY(3px);
+  transform: translateY(1px);
 }
 
